--- a/allbtn.html
+++ b/allbtn.html
@@ -13,7 +13,6 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
-            background-color: yellow; 
             padding: 0;
             display: flex;
             align-items: center;
@@ -31,7 +30,6 @@
             position: absolute;
             left: 0;
             width: 100%;
-
         }
         #animationAllbtn::after{
             bottom: 0;
@@ -47,12 +45,17 @@
 
     
     </style>
+    
 </head>
 <body>
     <button id="animationAllbtn">
-        <span>
-
-        </span>
+        <span></span>
     </button>
+    <script>
+        window.addEventListener('load', function(){
+            document.getElementById("animationAllbtn").classList.add("show")
+            document.body.classList = "show action popup" ;
+        })
+    </script>
 </body>
 </html>
