아이콘 클래스 토글 사용

--- a/allbtn.html
+++ b/allbtn.html
@@ -66,19 +66,11 @@
         <span></span>
     </button>
     <script>
-      let status = true;
-            document.getElementById("animationAllbtn").addEventListener('click', function(){
-               if(status){
-                document.getElementById("animationAllbtn").classList.add("show");
-                status =false;
-               }else{
-                document.getElementById("animationAllbtn").classList.remove("show");
-                status = true;
-               }
-              // window.addEventListener('load', function(){
-              //document.getElementById("animationAllbtn").addEventListener('click', function(){
-             //document.getElementById("animationAllbtn").classList.add("show")
-            })
+        let status = true;
+        document.getElementById("animationAllbtn").addEventListener('click', function(){
+            status = !status;
+            document.getElementById("animationAllbtn").classList.toggle("show", !status);
+        });
     </script>
 </body>
 </html>
