--- a/iconafter.html
+++ b/iconafter.html
@@ -9,14 +9,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css
     " rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <style>
+        .text-red{
+            color: red !important;
+        }
+        .text-yellow{
+            color: yellow !important;
+        }
+        .text-green{
+            color: green !important;
+        }
+    </style>
+
 </head>
 <body>
     <i class="bi bi-list fs-1" id="allBtn"></i>
 
     <script>
         const allBtn = document.getElementById("allBtn");
+        let status = true;
         allBtn.addEventListener("click", function(){
-            allBtn.classList.toggle("bi-x-lg")
+            if(status){
+            allBtn.classList = "bi bi-list fs-1 bi-x-lg text-red";
+            status = false;
+            }
+            else{
+            allBtn.classList = "bi bi-list fs-1";
+            status = true;
+            }
         })
     </script>
 </body>
